# 8005-a2-scalableservers

./: CMakeLists.txt  README.md
docs/: DesignDocument.odt  TestingDocument.odt  diagram2s.zargo  diagram2s.zargo~  diagrams.zargo  diagrams.zargo~
docs/imgs/dataflow/: allFlows.jpg.odg  allFlows.odg
src/client/: argparcer.h  main.cpp
src/client2/: main.cpp
src/epoll/: AcceptProcess.cpp  AcceptProcess.h  ConnectionProcess.cpp  ConnectionProcess.h  EchoProcess.cpp  EchoProcess.h  main.cpp
src/select/: ConnectionProcess.cpp  ConnectionProcess.h  ConnectionRecord.cpp  ConnectionRecord.h  ConnectionThreads.cpp  ConnectionThreads.h  SharedDataManager.cpp  SharedDataManager.h  Task.cpp  Task.h  main.cpp
src/traditional/: ConnectionProcess.cpp  ConnectionProcess.h  main.cpp
